--- a/manifest.json
+++ b/manifest.json
@@ -4,5 +4,18 @@
   "start_url": "/",
   "display": "standalone",
   "background_color": "#fafbfc",
-  "description": "A PWA for calisthenics training."
+  "theme_color": "#1976d2",
+  "description": "A PWA for calisthenics training and progress tracking.",
+  "icons": [
+    {
+      "src": "assets/icons/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "assets/icons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
